--- a/.github/workflows/check_availability.yml
+++ b/.github/workflows/check_availability.yml
@@ -2,7 +2,7 @@ name: Product Availability Check
 
 on:
   schedule:
-    - cron: '0 */4 * * *'  # Runs every 4 hours
+    - cron: '*/1 * * * *'  # Runs every 4 hours
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
