--- a/.github/workflows/check_availability.yml
+++ b/.github/workflows/check_availability.yml
@@ -2,7 +2,7 @@ name: Product Availability Check
 
 on:
   schedule:
-    - cron: '*/1 * * * *'  # Runs every 4 hours
+    - cron: '*/1 * * * *'  # Runs every 1 minute
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
@@ -27,9 +27,11 @@ jobs:
       run: python check_availability.py
 
     - name: Commit updated output to GitHub Pages
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config --global user.name "github-actions"
         git config --global user.email "github-actions@github.com"
         git add docs/output.json
-        git commit -m "Update output.json with latest availability data"
+        git commit -m "Update output.json with latest availability data" || echo "No changes to commit"
         git push
